<resources>
    <string name="app_name">FiPay</string>
    <string name="fipay_logo">FiPay Logo</string>
    <string name="welcome_image_description">One hand holding a card machine while another makes the payment.</string>
    <string name="welcome">Welcome</string>
    <string name="fipay_tagline">FiPay: The best multifunctional digital E-Wallet of this century</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">E-mail</string>
    <string name="email_hint">Your e-mail</string>
    <string name="password">Password</string>
    <string name="password_hint">Your password</string>
    <string name="cpf">CPF</string>
    <string name="cpf_hint">000.000.000–00</string>
    <string name="country_region">Country/Region</string>
    <string name="country_hints">Your Country</string>
    <string name="state">State</string>
    <string name="state_hint">Your State</string>
    <string name="city">City</string>
    <string name="city_hint">Your City</string>
    <string name="street">Street</string>
    <string name="street_hint">Your Street</string>
    <string name="create_account">Create account</string>
    <string name="signin_to">SignIn to </string>
    <string name="fipay">FiPay</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="pref_key">fipay_sharedpref</string>
    <string name="shp_remember_me">rememberMe</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_text">Please enter your e-mail. We will confirm the password change via e-mail.</string>
    <string name="confirm">Confirm</string>
    <string name="hamburger_menu">Hamburger menu</string>
    <string name="toolbar_title_placeholder">Toolbar title</string>
    <string name="upcoming_bill">Upcoming bill</string>
    <string name="see_all">See All</string>
    <string name="balance">Balance</string>
    <string name="money_placeholder">$1299.15</string>
    <string name="account_number">Account number</string>
    <string name="account_number_placeholder">*** *** *** 8399</string>
    <string name="full_name">Full name</string>
    <string name="full_name_hint">Your full name</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="my_card">My Card</string>
    <string name="security">Security</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="currency">Currency</string>
    <string name="services">Services</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change password</string>
    <string name="current_password_hint">Your current password</string>
    <string name="new_password_hint">Your new password</string>
    <string name="confirm_password_hint">Confirm your new password</string>
    <string name="current_password">Current password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>


    <string-array name="currencies">
        <item>BRL</item>
        <item>USD</item>
        <item>EUR</item>
        <item>SGD</item>
    </string-array>
</resources>